--- a/tasks/distribution/Debian.yml
+++ b/tasks/distribution/Debian.yml
@@ -1,17 +1,18 @@
 ---
 # tasks file for sbaerlocher.veeam-agent
 
-- name: add veeam repository deb
+- name: Debian | add veeam key
+  apt_key:
+    url: "http://repository.veeam.com/keys/VeeamSoftwareRepo"
+    state: present
+  tags:
+    - packages
+
+- name: Debian | add veeam repository
   apt_repository:
     repo: "deb http://repository.veeam.com/backup/linux/agent/dpkg/debian/{{ 'x86_64' if architecture else 'i386' }} noname veeam"
     state: present
     filename: veeam
-  register: veeam_repository
-- apt_key:
-    url: "http://repository.veeam.com/keys/VeeamSoftwareRepo"
-    state: present
-  when: veeam_repository.changed
-- name: Update cache
-  apt:
-    update_cache: yes
-  when: veeam_repository.changed
+    update_cache: true
+  tags:
+    - packages
